--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,2 +1,4 @@
 username.must.not.be.blank=Username must not be blank.
 password.must.not.be.blank=Password must not be blank.
+name.must.not.be.blank=Name must not be blank.
+code.must.not.be.blank=Code must not be blank.
