--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -1,2 +1,4 @@
 username.must.not.be.blank=Tên đăng nhập không được để trống.
 password.must.not.be.blank=Mật khẩu không được để trống.
+name.must.not.be.blank=Tên không được để trống.
+code.must.not.be.blank=Mã không được để trống.
